Fixed message selector overflow handling

--- a/src/styles/messages.module.css
+++ b/src/styles/messages.module.css
@@ -10,8 +10,23 @@
   flex-direction: column;
   overflow-y: visible;
   border-right: 1px solid rgba(0,0,0,0.1);
+  max-height: calc(100dvh - var(--header-height));
+  overflow-y: scroll;
 }
-
+#conversationsContainer{
+  overflow: scroll;
+}
+.messagesFriendsSelector::-webkit-scrollbar{
+  width: 5px;
+}
+.messagesFriendsSelector::-webkit-scrollbar-thumb{
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.10);
+  
+}
+.messagesFriendsSelector::-webkit-scrollbar-track{
+  background-color: rgba(0, 0, 0, 0.1);
+}
 .messagesHeaderContainer {
   display: flex;
   flex-direction: column;
